fixed an alignment issue in about page

--- a/about.css
+++ b/about.css
@@ -43,3 +43,6 @@
     height:100vh;
     width:100%;
 }
+nav .media ul {
+    margin-top:20px;
+}
